--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -20,6 +19,10 @@
         <activity
             android:name=".RegistroActivity"
             android:label="@string/title_activity_registro" >
+        </activity>
+        <activity
+            android:name=".MisJuegosActivity"
+            android:label="@string/title_activity_mis_juegos" >
         </activity>
     </application>
 
